--- a/Entregable_tp1/index.html
+++ b/Entregable_tp1/index.html
@@ -13,12 +13,15 @@
 		<nav class="navigation"> 
 			<!--<h1>Mi casi Paint :)</h1>-->
 			<ul>
-				<button id="lapiz" class="button1">Lapiz</button>
+				<button id="lapiz" onclick="document.querySelector('#color').click();" class="button1">Lapiz</button>
+				<input type="color" hidden id="color">
+				<input type="range" id="grosor" min="1" max="5" value="1">
 				<button id="goma" class="button1">Goma</button>
 
 				<button class="button1" onclick="document.querySelector('#input1').click();">Empezar con imagen</button>
 				<input id="input1" type="file" acept=".jpg , .jpeg, .png"style="display: none;">
 			
+				<input type="button" id="original" class="button2" value="Original">
 				<input type="button" id="ByN" class="button2" value="ByN">
 				<input type="button" id="sepia" class="button2" value="Sepia">
 				<input type="button" id="negativo" class="button2" value="Negativo">
@@ -28,20 +31,16 @@
 				<input type="button" id="suavizado" class="button2" value="Suavizado">
 				<input type="button" id="bordes" class="button2" value="Detección de Bordes">
 				<input type="button" id="blur" class="button2" value="Blur">
+
+				<button class="button1" onclick="document.querySelector('#dwn').click();">Descargame!</button>
+				<a href="" download="myImage.jpg" id="dwn" style="display: none;"></a>			
+				<input type="button" id="delete" class="button1" value="Descartar :(">
 			</ul>
 		</nav>
 		<article id="contenido">
 			<ul class="navigation">
 				<canvas id="myCanvas"  width="500" height="500" class="myCanvas" style="border: 1px solid black;background: rgb(255, 255, 255)"></canvas>
-				<input type="color" id="color" >
-				<input type="range" id="grosor" min="1" max="5" value="1">
-			
-			<!--<ul>-->
-				<!--</ul>-->
-				<button class="button1" onclick="document.querySelector('#dwn').click();">Descargame!</button>
-				<a href="" download="myImage.jpg" id="dwn" style="display: none;"></a>
-			
-				<input type="button" id="delete" class="button1" value="Descartar :(">
+				
 			</ul>
 		</article>
 		<!--<footer>
