--- a/Entregable_tp1/index.html
+++ b/Entregable_tp1/index.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Primer entregable - Lucero Lucrecia</title>
 		<link href="css/style.css" rel="stylesheet" type="text/css">
-		<script src="/./Entregable_tp1/js/js.js"></script>
+		<script src="js/js.js"></script>
 	</head>
 	<body>
 		<!--Menu de navegacion-->
