--- a/Entregable_tp1/index.html
+++ b/Entregable_tp1/index.html
@@ -21,29 +21,26 @@
 				<button class="button1" onclick="document.querySelector('#input1').click();">Empezar con imagen</button>
 				<input id="input1" type="file" acept=".jpg , .jpeg, .png"style="display: none;">
 			
-				
-
 				<button class="button1" onclick="document.querySelector('#dwn').click();">Descargame!</button>
 				<a href="" download="myImage.jpg" id="dwn" style="display: none;"></a>			
 				<input type="button" id="delete" class="button1" value="Descartar :(">
 			</ul>
+			<ul>
+				<input type="button" id="original" class="button2" value="Original">
+				<input type="button" id="ByN" class="button2" value="ByN">
+				<input type="button" id="sepia" class="button2" value="Sepia">
+				<input type="button" id="negativo" class="button2" value="Negativo">
+				<input type="button" id="brillo" class="button2" min="-90" max="90"  value="Brillo">
+				
+				<input type="button" id="saturacion" class="button2" value="Saturación">
+				<input type="button" id="blur" class="button2" value="Blur"> 
+				<!--<input type="button" id="suavizado" class="button2" value="Suavizado">-->
+				<!--<input type="button" id="bordes" class="button2" value="Detección de Bordes">-->
+			</ul>
 		</nav>
-		<article id="contenido">
+		<article class="contenido">
 			<ul>
 				<canvas id="myCanvas"  width="500" height="500" class="myCanvas" style="border: 1px solid black;background: rgb(255, 255, 255)"></canvas>
-			</ul>
-			<ul>
-			<input type="button" id="original" class="button2" value="Original">
-			<input type="button" id="ByN" class="button2" value="ByN">
-			<input type="button" id="sepia" class="button2" value="Sepia">
-			<input type="button" id="negativo" class="button2" value="Negativo">
-			<input type="button" id="brillo" class="button2" min="-90" max="90"  value="Brillo">
-			</ul>
-			<ul>
-			<input type="button" id="saturacion" class="button2" value="Saturación">
-			<input type="button" id="suavizado" class="button2" value="Suavizado">
-			<input type="button" id="bordes" class="button2" value="Detección de Bordes">
-			<input type="button" id="blur" class="button2" value="Blur"> 
 			</ul>
 		</article>
 		<!--<footer>
