--- a/Entregable_tp2/index.html
+++ b/Entregable_tp2/index.html
@@ -3,13 +3,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4 en fila - entregable 2</title>
+
+    <script src="https://kit.fontawesome.com/bff2fc4124.js" crossorigin="anonymous"></script>
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <script src="js/js.js"></script>
 </head>
 <body>
-    <header>4 en fila! Juguemos!</header>
-    <nav></nav>
-    <article></article>
+    <header>        
+        <div class="logo">            
+            <h1><i class="fas fa-star" style="color:rgb(247, 204, 15);"></i> 4 en fila! Juguemos!</h1>
+            
+        </div>
+        
+    </header>
+    <nav class="navigation">
+        <ul >
+            <input type="button" class="item" value="Juguemos!">
+            <input type="button" class="item" value="Reintentar!">
+            <input type="button" class="item" value="Holi">
+        </ul>
+    </nav>
+    <article class="content">
+        <canvas id="myCanvas"  width="500" height="500" class="myCanvas" style="border: 1px solid black;    border-radius: 5px;
+        background: rgb(255, 255, 255)"></canvas>
+    </article>
     <footer></footer>
 </body>
 </html>
