acomode las fichas

--- a/Entregable_tp2/index.html
+++ b/Entregable_tp2/index.html
@@ -22,8 +22,8 @@
     <nav class="navigation">
         
         <ul>
-            <input type="button" class="item" value="Juguemos!">
-            <input type="button" class="item" value="Reintentar!">
+            <input type="button" id="jugar" class="item" value="Juguemos!">
+            <input type="button" id="reiniciar"class="item" value="Reintentar!">
             <!--<a>Tamaño</a>
             <input type="number" id="alto" class="item" min ="6" max="10"value="6">-->
         </ul>
