actualizandoo otra vez

--- a/Entregable_tp2/index.html
+++ b/Entregable_tp2/index.html
@@ -27,7 +27,11 @@
             <!--<a>Tamaño</a>
             <input type="number" id="alto" class="item" min ="6" max="10"value="6">-->
         </ul>
+        <div class="jugador1"><i class="fas fa-angle-double-right" style="color: red;"></i> Jugador 1 </div>
+        <div class="jugador2"> Jugador 2 <i class="fas fa-angle-double-left" style="color:blue;"></i></div>
     </nav>
+    <ul>
+    </ul>
     <article class="content">
         <canvas id="myCanvas"  width="800" height="600" class="myCanvas" style="border: 1px solid black;    border-radius: 5px;
         background: rgb(255, 255, 255)"></canvas>
