--- a/Entregable_tp2/index.html
+++ b/Entregable_tp2/index.html
@@ -6,10 +6,11 @@
 
     <script src="https://kit.fontawesome.com/bff2fc4124.js" crossorigin="anonymous"></script>
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    
     <script src="js/Ficha.js"></script>
-    <!--<script src="js/Tablero.js"></script>-->
+    <script src="js/Tablero.js"></script>
     <!--<script src="js/Juego.js"></script>-->
-    <!--<script src="js/js.js"></script>-->
+    <!--<script src="js/Jugador.js"></script>-->
     <script src="js/main.js"></script>
 
 </head>
