--- a/Entregable_tp3/main.html
+++ b/Entregable_tp3/main.html
@@ -45,25 +45,42 @@
         <!--<img src="image/191220183051-mulan-2020-full-169.jpg" alt="portada">-->
     </nav>
 
-    <article id="content1" class="content1">        
-        
+    <article id="content1" class="content1">     
+        <figure>
         <img id="foto" class="foto1" src="image/Liu_Yifei_.jpg" alt="Liu Yifei">
-        <p id="text">Fa Mulan</p>
+        <figcaption id="text">Fa Mulan</figcaption>
+        <!--<p id="text">Fa Mulan</p>-->
+        </figure>
 
+        <figure>
         <img id="foto" class="foto2" src="image/Yoson_An.jpg" alt="Yoson An">
-        <p id="text">Chen Honghui</p>
+        <!--<p id="text">Chen Honghui</p>-->
+        <figcaption id="text">Xian Lang</figcaption> 
+        </figure>
 
+        <figure>
         <img id="foto" class="foto3" src="image/Donnie_Yen.jpg" alt="Donnie Yen">
-        <p id="text">Camandante Tung</p>
+        <!--<p id="text">Camandante Tung</p>-->
+        <figcaption id="text">Xian Lang</figcaption> 
+        </figure>
 
+        <figure>
         <img id="foto" class="foto4" src="image/Jet_Li.jpg" alt="Jet Li">
-        <p id="text">Emperador</p>
+        <!--<p id="text">Emperador</p>-->
+        <figcaption id="text">Xian Lang</figcaption> 
+        </figure>
 
+        <figure>
         <img id="foto" class="foto5" src="image/Jason_Scott_Lee.jpg" alt="Jason Scott Lee">
-        <p id="text">Bori Khan</p>
+        <!--<p id="text">Bori Khan</p>-->
+        <figcaption id="text">Xian Lang</figcaption> 
+        </figure>
 
+        <figure>
         <img id="foto" class="foto6" src="image/Gong_Li.jpg" alt="Gong Li">
-        <p id="text">Xian Lang</p>
+        <!--<p id="text">Xian Lang</p>-->
+        <figcaption id="text">Xian Lang</figcaption>        
+        </figure>
     </article>
 
     <article id="content2">
