--- a/Entregable_tp3/main.html
+++ b/Entregable_tp3/main.html
@@ -25,14 +25,14 @@
 
     <div class="entrada1"></div>
 
-    <div class="logo"></div>
+    <div class="logo"><p>*</p></div>
     <p id="countD"></p>
 
     <header id="header">   
         <div>
-            <a class="btn1"href="#content1">trailers</a>
-            <a class="btn2" href="">elenco</a>
-            <a class="btn3" href="">Mulannnn</a>
+            <a class="btn1"href="#content1">Home</a>
+            <a class="btn2" href="">Eventos</a>
+            <a class="btn3" href="">Comentarios</a>
             
             <a href="https://www.facebook.com/waltdisneymulan"><i class="fab fa-facebook-f"></i></a>
             <a href=" https://twitter.com/disneysmulan"><i class="fab fa-twitter"></i></a>
@@ -45,41 +45,42 @@
         <!--<img src="image/191220183051-mulan-2020-full-169.jpg" alt="portada">-->
     </nav>
 
-    <article id="content1" class="content1">     
+    <article id="content1" class="content1"> 
+        <figure><P>REPARTO</P></figure>
         <figure>
-        <img id="foto" class="foto1" src="image/Liu_Yifei_.jpg" alt="Liu Yifei">
-        <figcaption id="text">Fa Mulan</figcaption>
-        <!--<p id="text">Fa Mulan</p>-->
+            <p id="text">Fa Mulan</p>
+            <img id="foto" class="foto1" src="image/Liu_Yifei_.jpg" alt="Liu Yifei">
+            <figcaption id="text">Liu Yifei</figcaption>
         </figure>
 
         <figure>
-        <img id="foto" class="foto2" src="image/Yoson_An.jpg" alt="Yoson An">
-        <!--<p id="text">Chen Honghui</p>-->
-        <figcaption id="text">Xian Lang</figcaption> 
+            <p id="text">Chen Honghui</p>
+            <img id="foto" class="foto2" src="image/Yoson_An.jpg" alt="Yoson An">
+            <figcaption id="text">Yoson An</figcaption> 
         </figure>
 
         <figure>
-        <img id="foto" class="foto3" src="image/Donnie_Yen.jpg" alt="Donnie Yen">
-        <!--<p id="text">Camandante Tung</p>-->
-        <figcaption id="text">Xian Lang</figcaption> 
+            <p id="text">Camandante Tung</p>
+            <img id="foto" class="foto3" src="image/Donnie_Yen.jpg" alt="Donnie Yen">
+            <figcaption id="text">Donnie Yen</figcaption> 
         </figure>
 
         <figure>
-        <img id="foto" class="foto4" src="image/Jet_Li.jpg" alt="Jet Li">
-        <!--<p id="text">Emperador</p>-->
-        <figcaption id="text">Xian Lang</figcaption> 
+            <p id="text">Emperador</p>
+            <img id="foto" class="foto4" src="image/Jet_Li.jpg" alt="Jet Li">
+            <figcaption id="text">Jet Li</figcaption> 
         </figure>
 
         <figure>
-        <img id="foto" class="foto5" src="image/Jason_Scott_Lee.jpg" alt="Jason Scott Lee">
-        <!--<p id="text">Bori Khan</p>-->
-        <figcaption id="text">Xian Lang</figcaption> 
+            <p id="text">Bori Khan</p>
+            <img id="foto" class="foto5" src="image/Jason_Scott_Lee.jpg" alt="Jason Scott Lee">
+            <figcaption id="text">Jason Scott Lee</figcaption> 
         </figure>
 
         <figure>
-        <img id="foto" class="foto6" src="image/Gong_Li.jpg" alt="Gong Li">
-        <!--<p id="text">Xian Lang</p>-->
-        <figcaption id="text">Xian Lang</figcaption>        
+            <p id="text">Xian Lang</p>
+            <img id="foto" class="foto6" src="image/Gong_Li.jpg" alt="Gong Li">
+            <figcaption id="text">Gong Li</figcaption>        
         </figure>
     </article>
 
