--- a/Entregable_tp3/index.html
+++ b/Entregable_tp3/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Entregable 3 - Lucero Lucrecia</title> 
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
@@ -14,23 +14,26 @@
 
 <body>
     <!--<div id="spinner" ></div>-->
-    <div class="entrada">
-        <div class="capa1"></div>
-        <div class="capa2"></div>
-        <div class="capa3"></div>
-        <div class="capa4"></div>
-        <div class="capa5"></div>
-        <div class="capa6"></div>
-        <div class="capa7"></div>
-    </div>
+    <article class="entrada">
+            <div class="capa1"></div>
+            <div class="capa2"></div>
+            <div class="capa3"></div>
+            <div class="capa4"></div>
+            <div class="capa5"></div>
+            <div class="capa6"></div>
+            <div class="capa7"></div>
+    </article>
 
-    <div class="entrada1"></div>
+    <header class="presentacion">
+        <div class="logo">
+            <p>*</p>
+            <p id="countD"></p> 
+        </div>
+    </header>
 
-    <div class="logo"><p>*</p></div>
-    <p id="countD"></p>
-
-    <header id="header">   
-        <div>
+    <nav>   
+        <section id="header">
+            <a class="hamburguer" href="#">=</a>
             <a class="btn1"href="#content1">Home</a>
             <a class="btn2" href="">Eventos</a>
             <a class="btn3" href="">Comentarios</a>
@@ -39,62 +42,68 @@
             <a href=" https://twitter.com/disneysmulan"><i class="fab fa-twitter"></i></a>
             <a href=" https://instagram.com/mulan"><i class="fab fa-instagram"></i></a>            
             <a href="https://www.youtube.com/playlist?list=PLTnR43JTLNs_4moa3QnavHCAupS_Hj8Yz"><i class="fab fa-youtube"></i></a>            
-        </div>            
-    </header>
-
-    <nav id="navigation">
-        <!--<img src="image/191220183051-mulan-2020-full-169.jpg" alt="portada">-->
+        </section>  
+        
+        <section id="navigation"></section>          
     </nav>
 
     <article id="content1" class="content1"> 
-        <figure><P>REPARTO</P></figure>
-        <figure>
-            <p id="text">Fa Mulan</p>
-            <img id="foto" class="foto1" src="image/Liu_Yifei_.jpg" alt="Liu Yifei">
-            <figcaption id="text">Liu Yifei</figcaption>
-        </figure>
+        <section  class="fotos"> 
+            <figure>
+                <h1>REPARTO </h1>
+            </figure>
+            <figure>
+                <p id="text">Fa Mulan</p>
+                <img id="foto" class="foto1" src="image/Liu_Yifei_.jpg" alt="Liu Yifei">
+                <figcaption id="text">Liu Yifei</figcaption>
+            </figure>
 
-        <figure>
-            <p id="text">Chen Honghui</p>
-            <img id="foto" class="foto2" src="image/Yoson_An.jpg" alt="Yoson An">
-            <figcaption id="text">Yoson An</figcaption> 
-        </figure>
+            <figure>
+                <p id="text">Chen Honghui</p>
+                <img id="foto" class="foto2" src="image/Yoson_An.jpg" alt="Yoson An">
+                <figcaption id="text">Yoson An</figcaption> 
+            </figure>
 
-        <figure>
-            <p id="text">Camandante Tung</p>
-            <img id="foto" class="foto3" src="image/Donnie_Yen.jpg" alt="Donnie Yen">
-            <figcaption id="text">Donnie Yen</figcaption> 
-        </figure>
+            <figure>
+                <p id="text">Camandante Tung</p>
+                <img id="foto" class="foto3" src="image/Donnie_Yen.jpg" alt="Donnie Yen">
+                <figcaption id="text">Donnie Yen</figcaption> 
+            </figure>
 
-        <figure>
-            <p id="text">Emperador</p>
-            <img id="foto" class="foto4" src="image/Jet_Li.jpg" alt="Jet Li">
-            <figcaption id="text">Jet Li</figcaption> 
-        </figure>
+            <figure>
+                <p id="text">Emperador</p>
+                <img id="foto" class="foto4" src="image/Jet_Li.jpg" alt="Jet Li">
+                <figcaption id="text">Jet Li</figcaption> 
+            </figure>
 
-        <figure>
-            <p id="text">Bori Khan</p>
-            <img id="foto" class="foto5" src="image/Jason_Scott_Lee.jpg" alt="Jason Scott Lee">
-            <figcaption id="text">Jason Scott Lee</figcaption> 
-        </figure>
+            <figure>
+                <p id="text">Bori Khan</p>
+                <img id="foto" class="foto5" src="image/Jason_Scott_Lee.jpg" alt="Jason Scott Lee">
+                <figcaption id="text">Jason Scott Lee</figcaption> 
+            </figure>
 
-        <figure>
-            <p id="text">Xian Lang</p>
-            <img id="foto" class="foto6" src="image/Gong_Li.jpg" alt="Gong Li">
-            <figcaption id="text">Gong Li</figcaption>        
-        </figure>
+            <figure>
+                <p id="text">Xian Lang</p>
+                <img id="foto" class="foto6" src="image/Gong_Li.jpg" alt="Gong Li">
+                <figcaption id="text">Gong Li</figcaption>        
+            </figure>
+        </section>
     </article>
 
     <article id="content2">
-        <p>aca voy a tener un carrusel de imagenes destacadas</p>
-        <ul>
-            <li><img src='image/carrusel1.jpg' alt="uno" /></li>
-            <li><img src='image/carrusel2.jpg' alt="dos" /></li>           
-            <li><img src='image/carrusel3.jpg' alt="tres" /></li>
-            <li><img src='image/carrusel4.jpeg' alt="cuatro" /></li>
-            <li><img src='image/carrusel5.jpg' alt="cinco" /></li>
-            <li><img src='image/carrusel6.jpg' alt="seis" /></li>
-        </ul>
+        <section class="content2 -texto">
+            <p>aca voy a tener un carrusel de imagenes destacadas</p>
+        </section>
+        <section class="content2 -carrusel">
+            <ul>
+                <li><img src='image/carrusel1.jpg' alt="uno" /></li>
+                <li><img src='image/carrusel2.jpg' alt="dos" /></li>           
+                <li><img src='image/carrusel3.jpg' alt="tres" /></li>
+                <li><img src='image/carrusel4.jpeg' alt="cuatro" /></li>
+                <li><img src='image/carrusel5.jpg' alt="cinco" /></li>
+                <li><img src='image/carrusel6.jpg' alt="seis" /></li>
+            </ul>
+        </section>
     </article>
 
     <article id="content3">
