--- a/Entregable_tp3/index.html
+++ b/Entregable_tp3/index.html
@@ -19,17 +19,18 @@
     </div>
     <article class="entrada">
         <div class="capa1"></div>
-        <div class="capa2"></div>
+        <!--<div class="animacionPorCuadros"></div>-->
+        <div class="capa2">Royal</div>
         <div class="capa3"></div>
-        <div class="capa4"></div>
-        <div class="capa5"></div>
+        <div class="capa4">Brave</div>
+        <div class="capa5">True</div>
         <div class="capa6"></div>
         <div class="capa7"></div>
     </article>
-
+    <div class="capa7"></div>
     <header class="presentacion">
         <div class="logo">
-            <p>*</p>
+            <p><i class="fas fa-dragon"></i></p>
             <p id="countD"></p> 
         </div>
     </header>
@@ -63,6 +64,7 @@
         <section  class="fotos"> 
             <figure>
                 <h1>REPARTO </h1>
+                <div class="capa7"></div>
             </figure>
             <figure>
                 <p id="text">Fa Mulan</p>
