--- a/Entregable_tp3/form.html
+++ b/Entregable_tp3/form.html
@@ -15,6 +15,8 @@
     <div class="loader">
         <div id="spinner" ></div>
     </div>
+
+    <div class="page" hidden>
     <nav id="_menu">           
         <section class="mHamburguesa">
             <div class="linea -sup"></div>
@@ -33,11 +35,14 @@
                 <li><a href="https://www.facebook.com/waltdisneymulan"><i class="fab fa-facebook-f"></i></a></li>
                 <li><a href=" https://twitter.com/disneysmulan"><i class="fab fa-twitter"></i></a></li>
                 <li><a href=" https://instagram.com/mulan"><i class="fab fa-instagram"></i></a></li>            
-                <li><a href="https://www.youtube.com/playlist?list=PLTnR43JTLNs_4moa3QnavHCAupS_Hj8Yz"><i class="fab fa-youtube"></i></a></li>                
+                <li><a href="https://www.youtube.com/playlist?list=PLTnR43JTLNs_4moa3QnavHCAupS_Hj8Yz"><i class="fab fa-youtube"></i></a></li>  
+                <li><a href="https://preview.disneyplus.com/ar"><img class="disney" src="image/disney-plus.png" alt="disney" width="40px" height="40px"></a></li>                             
             </ul>      
         </section>  
     </nav>
     
+    <div class="capa6"></div>
+
     <article id="comment">
         <section class="form">
             <h1>Dejanos tu comentario!</h1>
@@ -57,5 +62,6 @@
 
         </section>
     </article>
+</div>
 </body>
 </html>
