--- a/Entregable_tp3/index.html
+++ b/Entregable_tp3/index.html
@@ -17,13 +17,14 @@
     <div class="loader">
         <div id="spinner" ></div>
     </div>
+
+    <div class="page" hidden>
     <article class="entrada">
         <div class="capa1"></div>
-        <!--<div class="animacionPorCuadros"></div>-->
-        <div class="capa2">Royal</div>
+        <div class="capa2"><p>Royal</p></div>
         <div class="capa3"></div>
-        <div class="capa4">Brave</div>
-        <div class="capa5">True</div>
+        <div class="capa4"><p>Brave</p></div>
+        <div class="capa5"><p>True</p></div>
         <div class="capa6"></div>
         <div class="capa7"></div>
     </article>
@@ -54,6 +55,7 @@
                 <li><a href=" https://twitter.com/disneysmulan"><i class="fab fa-twitter"></i></a></li>
                 <li><a href=" https://instagram.com/mulan"><i class="fab fa-instagram"></i></a></li>            
                 <li><a href="https://www.youtube.com/playlist?list=PLTnR43JTLNs_4moa3QnavHCAupS_Hj8Yz"><i class="fab fa-youtube"></i></a></li>                
+                <li><a href="https://preview.disneyplus.com/ar"><img class="disney" src="image/disney-plus.png" alt="disney" width="40px" height="40px"></a></li>                
             </ul>      
         </section>  
     </nav>
@@ -71,7 +73,11 @@
                 <img id="foto" class="foto1" src="image/Liu_Yifei_.jpg" alt="Liu Yifei">
                 <figcaption id="text">Liu Yifei</figcaption>
             </figure>
-
+            <figure>
+                <p id="text">Fa Mulan (joven)</p>
+                <img id="foto" class="foto1" src="image/Crystal_Rao.jpg" alt="Liu Yifei">
+                <figcaption id="text">Crystal Rao</figcaption>
+            </figure>
             <figure>
                 <p id="text">Chen Honghui</p>
                 <img id="foto" class="foto2" src="image/Yoson_An.jpg" alt="Yoson An">
@@ -118,6 +124,7 @@
                 <li><img src='image/carrusel6.jpg' alt="seis" /></li>
             </ul>
         </section>
-    </article>    
+    </article>  
+</div>  
 </body>
 </html>
