agruegue una animacion de scroll

--- a/Entregable_tp3/index.html
+++ b/Entregable_tp3/index.html
@@ -63,10 +63,11 @@
     <section id="navigation"></section>          
 
     <article id="reparto" class="content1"> 
+        <div id="anim" class="capa7" hidden></div>
         <section  class="fotos"> 
             <figure>
                 <h1>REPARTO </h1>
-                <div class="capa7"></div>
+
             </figure>
             <figure>
                 <p id="text">Fa Mulan</p>
