agregue animacion de entrada de formulario y comentarios

--- a/Entregable_tp3/events.html
+++ b/Entregable_tp3/events.html
@@ -42,7 +42,7 @@
         <div class="capa6"></div>
 
         <article id="events">
-            <div class="anim_entrada" hidden>
+            <div class="anim_entrada">
                 <p><i class="fas fa-dragon"></i></p>              
                 <h1>Eventos y anuncios</h1>
                 
