--- a/Entregable_tp3/form.html
+++ b/Entregable_tp3/form.html
@@ -42,23 +42,25 @@
         <div class="capa6"></div>
 
         <article id="comment">
-            <section class="form">
-                <h1>Dejanos tu comentario!</h1>
-                <p class="nota"></p>
-                <form class="form_msj">
-                    <h4>Nombre: </h4>
-                    <input type="text" class="form-person-name" placeholder="Nombre" name="" maxlength="20" required>
+            <div class="anim_entrada">
+                <section class="form">
+                    <h1>Dejanos tu comentario!</h1>
+                    <p class="submit" hidden>Tu comentario ha sido enviado!</p>
+                    <p class="nota"></p>
+                    <form class="form_msj">
+                        <h4>Nombre: </h4>
+                        <input type="text" class="form-person-name" placeholder="Nombre" name="" maxlength="20" required>
 
-                    <h4>Email: </h4>
-                    <input type="text" class="email" name="Nombre" value="" placeholder="E-mail" maxlength="20" required />
+                        <h4>Email: </h4>
+                        <input type="text" class="email" name="Nombre" value="" placeholder="E-mail" maxlength="20" required />
 
-                    <h4>Mensaje </h4>
-                    <textarea name="comm" rows="5" cols="40" id="comm" placeholder="Tu comentario" required></textarea>
+                        <h4>Mensaje </h4>
+                        <textarea name="comm" rows="5" cols="40" id="comm" placeholder="Tu comentario" required></textarea>
 
-                    <input type="submit" id="submit" class="form-button" name="" value="Enviar">
-                </form>
-
-            </section>
+                        <input type="submit" id="submit" class="form-button" name="" value="Enviar">
+                    </form>
+                </section>
+            </div>
         </article>
     </div>
 </body>
