--- a/Entregable_tp3/index.html
+++ b/Entregable_tp3/index.html
@@ -21,18 +21,17 @@
     <div class="page" hidden>
         
     <article class="entrada">
-        <div class="capa1"></div>
+        <div class="capa1"></div><!--fondo-->
         <div class="capa2"><h2>Royal</h2></div>
-        <!--- <div class="capa3"></div>-->
+        <!--- <div class="capa3"></div>--><!--humo rojo-->
         <div class="capa4"><h2>Brave</h2></div>
-        <div class="capa6"></div>
+        <div class="capa6"></div> <!--flor-->
         <div class="capa5"><h2>True</h2></div>
-        <div class="capa7"></div>
+        <div class="capa7"></div> <!--petalos cayendo-->
     </article>
     <!---<div class="capa7"></div>-->
     <header class="presentacion">
        <!--- <div class="logo"></div>-->
-       <div id="anim_scroll" class="capa3"  hidden></div>
 
         <p><i class="fas fa-dragon"></i></p>
         <h1>"No hay valor sin miedo. <br> Muéstrale al mundo quién eres." <br>- Mulan -</h1>
@@ -67,6 +66,7 @@
 
     <article id="reparto" class="content1"> 
         <div id="anim" class="capa7" hidden></div>
+
         <section  class="fotos"> 
             <figure>
                 <h1>REPARTO </h1>
