--- a/TPE4-diazpace_molleker_lucero/index.html
+++ b/TPE4-diazpace_molleker_lucero/index.html
@@ -14,7 +14,7 @@
             <p>Diaz Pace Santiago - Molleker Leonardo - Lucero Lucrecia</p>
         </div>       
         <div class="logo">
-            <img src="../imagenes/Logo_chico_blanco.png" height="40px">
+            <img src="Imagenes/Logo_chico_blanco.png" height="40px">
         </div>
     </header>
 
