trabajando en index e inicio de sesion

--- a/TPE5-diazpace_molleker_lucero/html/inicio-sesion.html
+++ b/TPE5-diazpace_molleker_lucero/html/inicio-sesion.html
@@ -14,11 +14,12 @@
     </header>
     <h1>Bienvenido!</h1>
     <form class="flex">
-        <label>Ingresa tu usuario</label>
-        <input class="input-login" type="text">
-        <label>Ingresa tu contraseña</label>
-        <input class="input-login" type="text">
-        <input class="btn-form inicio-sesion" type="submit" value="Iniciar sesión">
+        <label >Ingresa tu usuario</label>
+        <input class="input-login" type="text" placeholder="  Aca va tu usuario">
+        <label >Ingresa tu contraseña</label>
+        <input class="input-login" type="password" placeholder="  Pone tu contraseña">
+        
+        <button class="btn-form inicio-sesion" value="Iniciar sesión"><a href="home.html">Iniciar sesión</a></button>
     </form>
 </body>
 </html>
