--- a/TPE5-diazpace_molleker_lucero/html/index.html
+++ b/TPE5-diazpace_molleker_lucero/html/index.html
@@ -9,7 +9,15 @@
     <script src="../js/js.js"></script>
 </head>
 <body>
+    <header class="navegation">
+        <div class="logo-navigation"></div>
+        <button class="login"><a href="inicio-sesion.html">Iniciar sesión</a></button>
+        <button class="registrarse">Registrarse</button>
+    </header>
     <header class="presentacion">
+
+
+
         <img src="../images/logo-negro.png" class="logo-negro index">
         <h1 class="h1-index">Toda tu música favorita!</h1>
     </header>
