modificaciones del index e inicio

--- a/TPE5-diazpace_molleker_lucero/html/inicio-sesion.html
+++ b/TPE5-diazpace_molleker_lucero/html/inicio-sesion.html
@@ -9,9 +9,14 @@
     <script src="../js/js.js"></script>
 </head>
 <body>
-    <header class="header-logo">
-        <img class="logo-negro generico" src="../images/logo-negro.png">
+    <header class="navegation">
+        <div class="logo-navigation"></div>
+        
+        <section class="container-links">
+            <a class="links">Ayuda</a>
+        </section>
     </header>
+
     <h1>Bienvenido!</h1>
     <form class="flex">
         <label >Ingresa tu usuario</label>
