--- a/TPE5-diazpace_molleker_lucero/html/opciones-plan.html
+++ b/TPE5-diazpace_molleker_lucero/html/opciones-plan.html
@@ -9,9 +9,16 @@
     <script src="../js/js.js"></script>
 </head>
 <body>
-    <header class="header-logo">
-        <img class="logo-negro generico" src="../images/logo-negro.png">
+    <header class="navegation">
+        <div class="logo-navigation"></div>
+        <input type="text" placeholder="Buscar..." class="search">
+        <section class="container-links">
+            <a class="links">Mi Playlist</a>
+            <a class="links">Mi cuenta</a>
+            <a class="links">Ayuda</a>
+        </section>
     </header>
+
     <h1 class="tit-plan">Plan premium</h1>
     <h2 class="tit2-plan">Opciones de plan:</h2>
     <section class="planes">
@@ -35,5 +42,11 @@
 
         <button class="btn-form inicio-sesion">Confirmar plan</button>
     </div>
+
+
+    <footer class="contact"> 
+        <section class="social-media">
+        </section>
+    </footer>
 </body>
 </html>
