--- a/TPE5-diazpace_molleker_lucero/html/index.html
+++ b/TPE5-diazpace_molleker_lucero/html/index.html
@@ -7,23 +7,36 @@
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <script src="../js/js.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Squada+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="navegation">
         <div class="logo-navigation"></div>
-        <button class="login"><a href="inicio-sesion.html">Iniciar sesión</a></button>
-        <button class="registrarse">Registrarse</button>
+        <input type="text" placeholder="Buscar..." class="search">
+        <section class="container-links">
+            <button class="login"><a href="inicio-sesion.html">Iniciar sesión</a></button>
+            <button class="registrarse">Registrarse</button>
+        </section>
     </header>
-    <header class="presentacion">
 
-
-
+    <section class="presentacion">
         <img src="../images/logo-negro.png" class="logo-negro index">
-        <h1 class="h1-index">Toda tu música favorita!</h1>
-    </header>
+        <h1 class="h1-index">
+            <div>Toda tu música favorita!</div>
+            <div>A la mejor calidad!</div>
+        </h1>
+        <button class="prueba">Prueba ahora</button>
+
+    </section>
+
     <section class="opciones-login">
-        <button class="login">Iniciar sesión</button>
+        <button class="login"><a href="inicio-sesion.html">Iniciar sesión</button>
         <button class="registrarse">Registrarse</button>
     </section>
+
+
+
+
 </body>
 </html>
