--- a/TPE5-diazpace_molleker_lucero/html/home.html
+++ b/TPE5-diazpace_molleker_lucero/html/home.html
@@ -11,6 +11,7 @@
     <header class="navegation">
         <div class="logo-navigation"></div>
         <input type="text" placeholder="Buscar..." class="search">
+        <div class="lupa"></div>
         <section class="container-links">
             <a class="links">Mi Playlist</a>
             <a class="links">Mi cuenta</a>
@@ -18,7 +19,86 @@
         </section>
     </header>
     <section class="content">
-
+        <section class="music-sections">
+            <h3>Artistas</h3>
+            <section class="music-content">
+                <div class="artist artist1"></div>
+                <div class="artist artist2"></div>
+                <div class="artist artist3"></div>
+                <div class="artist artist4"></div>
+                <div class="artist artist5"></div>
+                <div class="artist artist6"></div>
+            </section>
+        </section>
+        <section class="music-sections">
+            <h3>Más escuchado</h3>
+            <section class="music-content">
+                <div class="songs song1"></div>
+                <div class="songs song2"></div>
+                <div class="songs song3"></div>
+                <div class="songs song4"></div>
+                <div class="songs song5"></div>
+                <div class="songs song6"></div>
+            </section>
+        </section>
+        <section class="music-sections">
+            <h3>Lo nuevo</h3>
+            <section class="music-content">
+                <div class="songs song1"></div>
+                <div class="songs song2"></div>
+                <div class="songs song3"></div>
+                <div class="songs song4"></div>
+                <div class="songs song5"></div>
+                <div class="songs song6"></div>
+            </section>
+        </section>
+        <section class="music-sections">
+            <h3>En tu idioma</h3>
+            <section class="music-content">
+                <div class="songs song1"></div>
+                <div class="songs song2"></div>
+                <div class="songs song3"></div>
+                <div class="songs song4"></div>
+                <div class="songs song5"></div>
+                <div class="songs song6"></div>
+            </section>
+        </section>
+        <section class="music-sections">
+            <h3>Podcast</h3>
+            <section class="music-content">
+                <div class="songs song1"></div>
+                <div class="songs song2"></div>
+                <div class="songs song3"></div>
+                <div class="songs song4"></div>
+                <div class="songs song5"></div>
+                <div class="songs song6"></div>
+            </section>
+        </section>
+        <section class="music-sections">
+            <h3>Para estudiar</h3>
+            <section class="music-content">
+                <div class="songs song1"></div>
+                <div class="songs song2"></div>
+                <div class="songs song3"></div>
+                <div class="songs song4"></div>
+                <div class="songs song5"></div>
+                <div class="songs song6"></div>
+            </section>
+        </section>
+        <section class="music-sections">
+            <h3>Para entrenar</h3>
+            <section class="music-content">
+                <div class="songs song1"></div>
+                <div class="songs song2"></div>
+                <div class="songs song3"></div>
+                <div class="songs song4"></div>
+                <div class="songs song5"></div>
+                <div class="songs song6"></div>
+            </section>
+        </section>
+    </section>
+    <section class="player">
+            
     </section>
     <footer class="contact"> 
         <section class="social-media">
