mis cambios en el index

--- a/TPE5-diazpace_molleker_lucero/html/inicio-sesion.html
+++ b/TPE5-diazpace_molleker_lucero/html/inicio-sesion.html
@@ -16,15 +16,21 @@
             <a class="links">Ayuda</a>
         </section>
     </header>
+    <article>
+        <h1>Bienvenido!</h1>
+        <form class="flex">
+            <label >Ingresa tu usuario</label>
+            <input class="input-login" type="text" placeholder="  Aca va tu usuario">
+            <label >Ingresa tu contraseña</label>
+            <input class="input-login" type="password" placeholder="  Pone tu contraseña">
+            
+            <button class="btn-form inicio-sesion" value="Iniciar sesión"><a href="home.html">Iniciar sesión</a></button>
+        </form>
+    </article>
 
-    <h1>Bienvenido!</h1>
-    <form class="flex">
-        <label >Ingresa tu usuario</label>
-        <input class="input-login" type="text" placeholder="  Aca va tu usuario">
-        <label >Ingresa tu contraseña</label>
-        <input class="input-login" type="password" placeholder="  Pone tu contraseña">
-        
-        <button class="btn-form inicio-sesion" value="Iniciar sesión"><a href="home.html">Iniciar sesión</a></button>
-    </form>
+    <footer class="contact"> 
+        <section class="social-media">
+        </section>
+    </footer>
 </body>
 </html>
