--- a/TPE5-diazpace_molleker_lucero/html/index.html
+++ b/TPE5-diazpace_molleker_lucero/html/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="navegation">
         <div class="logo-navigation"></div>
-        <input type="text" placeholder="Buscar..." class="search">
+
         <section class="container-links">
             <button class="login"><a href="inicio-sesion.html">Iniciar sesión</a></button>
             <button class="registrarse">Registrarse</button>
@@ -21,13 +21,10 @@
     </header>
 
     <section class="presentacion">
-        <img src="../images/logo-negro.png" class="logo-negro index">
-        <h1 class="h1-index">
-            <div>Toda tu música favorita!</div>
-            <div>A la mejor calidad!</div>
-        </h1>
-        <button class="prueba">Prueba ahora</button>
-
+            <h1 class="h1-index">
+                Toda tu música favorita!
+            </h1>
+            <button class="prueba">Prueba ahora</button>        
     </section>
 
     <section class="opciones-login">
@@ -35,8 +32,10 @@
         <button class="registrarse">Registrarse</button>
     </section>
 
-
-
+    <footer class="contact"> 
+        <section class="social-media">
+        </section>
+    </footer>
 
 </body>
 </html>
