Added missing content in home

--- a/TPE5-diazpace_molleker_lucero/html/home.html
+++ b/TPE5-diazpace_molleker_lucero/html/home.html
@@ -19,6 +19,10 @@
         </section>
     </header>
     <section class="content">
+        <section class="sugerencias">
+            <div class="back"></div>
+            <h1>Sugerencias</h1>
+        </section>
         <section class="music-sections">
             <h3>Artistas</h3>
             <section class="music-content">
