Agregado buscar en Ayuda

--- a/TPE5-diazpace_molleker_lucero/html/ayuda.html
+++ b/TPE5-diazpace_molleker_lucero/html/ayuda.html
@@ -19,7 +19,17 @@
         </section>
     </header>
     <div class="ayuda">
-        <h2 class="tit-plan"> ¿En qué podemos ayudarte?</h2>
+        <h2 class="tit-plan">¿En qué podemos ayudarte?</h2>
+        <div id="linea-buscar">
+            <div id="adentro">
+                <input id="buscar" type="search" placeholder="  Ingrese texto ...">
+                <span>
+                <button id="btn-buscar"> Buscar </button>
+                </span>
+            </div>
+        </div>
+
+
         <div class="acordeon">
             <div class="acordeon__item">
                 <input type="radio" name="acordeon" id="item1">
