Modificada página Ayuda

--- a/TPE5-diazpace_molleker_lucero/html/ayuda.html
+++ b/TPE5-diazpace_molleker_lucero/html/ayuda.html
@@ -15,10 +15,10 @@
         <section class="container-links">
             <a class="links">Mi Playlist</a>
             <a class="links">Mi cuenta</a>
-            <a class="links">Ayuda</a>
         </section>
     </header>
     <div class="ayuda">
+        <div class="back"></div>
         <h2 class="tit-plan">¿En qué podemos ayudarte?</h2>
         <div id="linea-buscar">
             <div id="adentro">
