--- a/TPE5-diazpace_molleker_lucero/html/inicio-sesion.html
+++ b/TPE5-diazpace_molleker_lucero/html/inicio-sesion.html
@@ -13,7 +13,7 @@
         <div class="logo-navigation"></div>
         
         <section class="container-links">
-            <a class="links">Ayuda</a>
+            <a href="ayuda.html" class="links">Ayuda</a>
         </section>
     </header>
     <article>
