Agregado de funcionalidad

--- a/TPE5-diazpace_molleker_lucero/html/home.html
+++ b/TPE5-diazpace_molleker_lucero/html/home.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Spoiler Five</title>
 </head>
 <body>
     <header class="navegation">
         <div class="logo-navigation"></div>
-        <input type="text" placeholder="Buscar..." class="search">
+        <input type="text" placeholder="  Buscar..." class="search">
         <div class="lupa"></div>
         <section class="container-links">
             <a class="links">Mi Playlist</a>
             <a class="links">Mi cuenta</a>
-            <a class="links">Ayuda</a>
+            <a class="links" href="ayuda.html" >Ayuda</a>
         </section>
     </header>
     <section class="content">
@@ -57,7 +57,7 @@
             </section>
         </section>
         <section class="music-sections">
-            <h3>En tu idioma</h3>
+            <h3>Playlist</h3>
             <section class="music-content">
                 <div class="songs song1"></div>
                 <div class="songs song2"></div>
