--- a/TPE5-diazpace_molleker_lucero/html/ayuda.html
+++ b/TPE5-diazpace_molleker_lucero/html/ayuda.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Spoiler Five</title>
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <script src="../js/js.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Squada+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="navegation">
         <div class="logo-navigation"></div>
-        <input type="text" placeholder="Buscar..." class="search">
+        <input type="text" placeholder="  Buscar..." class="search">
         <section class="container-links">
+            <a class="links" href="home.html" >Home</a>
             <a class="links">Mi Playlist</a>
             <a class="links">Mi cuenta</a>
         </section>
