Se agregó sección Mi Cuenta

--- a/TPE5-diazpace_molleker_lucero/html/ayuda.html
+++ b/TPE5-diazpace_molleker_lucero/html/ayuda.html
@@ -17,7 +17,8 @@
         <section class="container-links">
             <a class="links" href="home.html" >Home</a>
             <a class="links">Mi Playlist</a>
-            <a class="links">Mi cuenta</a>
+            <a class="links" href="mi-cuenta.html">Mi cuenta</a>
+            <a class="links" href="" >Notificaciones</a>
         </section>
     </header>
     <div class="ayuda">
