--- a/TPE5-diazpace_molleker_lucero/html/home.html
+++ b/TPE5-diazpace_molleker_lucero/html/home.html
@@ -14,7 +14,8 @@
         <div class="lupa"></div>
         <section class="container-links">
             <a class="links">Mi Playlist</a>
-            <a class="links">Mi cuenta</a>
+            <a class="links" href="mi-cuenta.html" >Mi cuenta</a>
+            <a class="links">Notificaciones</a>
             <a class="links" href="ayuda.html" >Ayuda</a>
         </section>
     </header>
